# flightsearch

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: chat.py
backend/app/core/: config.py  session_store.py
backend/app/data/: city_mapping.json  flatType.json
backend/app/schemas/: chat.py
backend/app/services/: flight_mock.py  flight_search.py  llm_service.py
backend/tests/: test_llm_service.py
docs/: operation-guide.md
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: chat.ts
frontend/src/components/: ChatBox.vue  ClarifyCard.vue  FlightList.vue  GuideDialog.vue  MockDataDialog.vue  TripCard.vue
frontend/src/stores/: chat.ts
frontend/src/types/: index.ts
